care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_Facebook_Link__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Facebook_Link__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Stakeholder: Facebook Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>