care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stakeholder: Fraud</label>
    <type>Checkbox</type>
</CustomField>