care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_Lawsuit_and_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Lawsuit_and_Settlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <inlineHelpText>When there is a &quot;Hit&quot; click on the Checkbox</inlineHelpText>
    <label>Stakeholder: Lawsuit and Settlement</label>
    <type>Checkbox</type>
</CustomField>