care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_NSOPW_Check__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_NSOPW_Check__c</fullName>
    <description>SFORCE-3477 - added new field</description>
    <label>Stakeholder: NSOPW Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hit</fullName>
            </value>
            <value>
                <fullName>Clear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>