care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_RDC_Results__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_RDC_Results__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>xx_Stakeholder: RDC Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>