care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_search__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_search__c</fullName>
    <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+Business_Stakeholder__c, Business_Stakeholder__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stakeholder search</label>
    <type>Text</type>
</CustomField>