care/force-app/main/default/objects/Vetting__c/fields/Stakeholder_Sex_Offender__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Sex_Offender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFORCE-2848
Modify Vetting Custom Object
SFORCE-3477 - Modified Field Name</description>
    <inlineHelpText>When there is a &quot;Hit&quot; click on the Checkbox</inlineHelpText>
    <label>Stakeholder: Sex Offender</label>
    <type>Checkbox</type>
</CustomField>