care/force-app/main/default/objects/Vetting__c/fields/Sum_of_Automatic_Fail_Violations__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Automatic_Fail_Violations__c</fullName>
    <description>Sum of Automatic Fail Violations</description>
    <inlineHelpText>Sum of Automatic Fail Violations</inlineHelpText>
    <label>Sum of Automatic Fail Violations</label>
    <summaryFilterItems>
        <field>Infraction__c.Violation_Level__c</field>
        <operation>equals</operation>
        <value>Automatic Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>Infraction__c.Vetting_Object__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>