care/force-app/main/default/objects/Vetting__c/fields/Total_CGs_Passed__c.field-meta.xml
<CustomField>
    <fullName>Total_CGs_Passed__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Total number of Caregivers who passed verification audit successfully</inlineHelpText>
    <label>Total CGs Passed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>