care/force-app/main/default/objects/Vetting__c/fields/Total_CGs_Sent_for_Verification__c.field-meta.xml
<CustomField>
    <fullName>Total_CGs_Sent_for_Verification__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Total number of Caregivers sent for verification</inlineHelpText>
    <label>Total CGs Sent for Verification</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>