care/force-app/main/default/objects/Vetting__c/fields/TR_Adverse_Media_Monitoring_Business__c.field-meta.xml
<CustomField>
    <fullName>TR_Adverse_Media_Monitoring_Business__c</fullName>
    <label>TR Adverse Media Monitoring Business</label>
    <type>Date</type>
</CustomField>