care/force-app/main/default/objects/Vetting__c/fields/TR_Batch_Alert__c.field-meta.xml
<CustomField>
    <fullName>TR_Batch_Alert__c</fullName>
    <label>TR Batch Alert</label>
    <type>Date</type>
</CustomField>