care/force-app/main/default/objects/Vetting__c/fields/TR_Monitoring_Set__c.field-meta.xml
<CustomField>
    <fullName>TR_Monitoring_Set__c</fullName>
    <label>TR Adverse Media Check</label>
    <type>Date</type>
</CustomField>