care/force-app/main/default/objects/Vetting__c/fields/Training_Opportunities_Offered__c.field-meta.xml
<CustomField>
    <fullName>Training_Opportunities_Offered__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>List the training opportunities offered to employees</inlineHelpText>
    <label>Training Opportunities Offered</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>