care/force-app/main/default/objects/Vetting__c/fields/Type_of_Vetting__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vetting__c</fullName>
    <description>SFORCE-5701- Modify Vetting Custom Object</description>
    <label>Type of Vetting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>