care/force-app/main/default/objects/Vetting__c/fields/Verfication_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Verfication_Report_Uploaded__c</fullName>
    <description>Sforce 2497</description>
    <inlineHelpText>Enter the date the Verification Report was uploaded to SF</inlineHelpText>
    <label>Verfication Report Uploaded</label>
    <type>Date</type>
</CustomField>