care/force-app/main/default/objects/Vetting__c/fields/Vetting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Comments__c</fullName>
    <description>SFORCE-2848
Modify Vetting Custom Object</description>
    <label>Vetting Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>