care/force-app/main/default/objects/Vetting__c/fields/Vetting_Status__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Status__c</fullName>
    <description>Sforce 2497 -- Establish BUC Agency Audit/Verification Process and Reporting for Best Buy</description>
    <label>Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>No Current Inspection Reports (NCIR)</fullName>
            </value>
            <value>
                <fullName>Automatic Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>