care/force-app/main/default/objects/Vetting__c/fields/WPS_Account__c.field-meta.xml
<CustomField>
    <fullName>WPS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sforce 2497</description>
    <label>WPS Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>contains</operation>
            <value>Best Buy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vettings (WPS Account)</relationshipLabel>
    <relationshipName>Vettings1</relationshipName>
    <type>Lookup</type>
</CustomField>