care/force-app/main/default/objects/Vetting__c/recordTypes/BUC_Agency_Caregiver_Audit.recordType-meta.xml
<RecordType>
    <fullName>BUC_Agency_Caregiver_Audit</fullName>
    <active>true</active>
    <description>Sforce 2497</description>
    <label>BUC Agency Caregiver Audit</label>
</RecordType>