care/force-app/main/default/objects/Vetting__c/recordTypes/BUC_Online_Vetting.recordType-meta.xml
<RecordType>
    <fullName>BUC_Online_Vetting</fullName>
    <active>true</active>
    <description>SFORCE-2848 Modify Vetting Custom Object</description>
    <label>BUC Online Vetting</label>
</RecordType>