care/force-app/main/default/objects/Vetting__c/recordTypes/BUC_Onsite_Vetting.recordType-meta.xml
<RecordType>
    <fullName>BUC_Onsite_Vetting</fullName>
    <active>true</active>
    <description>SFORCE-2883 Dev - Add Overall Score field to BUC Network Vetting and Vetting Related List</description>
    <label>BUC Onsite Vetting</label>
</RecordType>