care/force-app/main/default/objects/Vetting__c/recordTypes/US_BUC_Network_Vetting.recordType-meta.xml
<RecordType>
    <fullName>US_BUC_Network_Vetting</fullName>
    <active>true</active>
    <description>Sforce 2497</description>
    <label>US BUC Network Vetting</label>
</RecordType>