care/force-app/main/default/objects/Vetting__c/validationRules/BUC_Center_Name_Edit_Only_For_Admins.validationRule-meta.xml
<ValidationRule>
    <fullName>BUC_Center_Name_Edit_Only_For_Admins</fullName>
    <active>true</active>
    <description>BUC Center Name Edit Only For Admins</description>
    <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   ISCHANGED(BUC_Center_Name__c)
	)</errorConditionFormula>
    <errorMessage>Insufficient previleges to edit BUC Center Name. Please contact administrator.</errorMessage>
</ValidationRule>